--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   user-select: none;
   font-family: 'Poppins', sans-serif;
+  transition: all 0.3s;
 }
 #backgroundArt {
   position: absolute;
